# KaChing

./: README.md  main.py  pyproject.toml  test.py
clients/: gpt4_mini.py
data/: final_data.csv  final_data_multi.csv  final_data_multi_enhanced.csv
logic/: fetch.py
model/: best_lstm_model_enhanced.pth  best_lstm_model_pro.pth  lgb_model_final.joblib  lstm_multi_stock.pth  xgb_model_final.joblib
node/decide_fetch/: agent.py  convert.py  graph.py  handler.py  model.py  tools.py
node/explain/: agent.py  convert.py  graph.py  model.py
node/query_optimize/: agent.py  graph.py  logic.py  model.py  tools.py
scripts/: backtest.py  backtest_lgb.py  backtest_lstm.py  backtest_xgb.py  feature_importance.py  model.py  preprocess.py  train.py  train_lgb.py  train_lstm.py  train_ml.py  train_mlp.py  train_transformer.py  train_xgb.py
utils/: random_seed.py
