[project]
name = "kaching"
version = "0.1.0"
description = ""
authors = [
    {name = "momonong",email = "morrischen2.9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "openai (>=1.84.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pandas-ta (>=0.4.67b0,<0.5.0)",
    "finmind (>=1.8.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
